# IN3140-gruppeoppgave

./: .gitignore  BeatPlanner.py  Kilder.txt  Plan.txt  Player.py  README.md  in3140_oblig1_task5_eirikolb.py (1).py  point_to_point_mapper.py  test.py
crust_ws/devel/: .catkin  .rosinstall  setup.sh
crust_ws/devel/include/crustcrawler_msgs/: CircleDescription.h
crust_ws/devel/lib/pkgconfig/: crustcrawler_control.pc  crustcrawler_description.pc  crustcrawler_gazebo.pc  crustcrawler_msgs.pc  crustcrawler_pen_description.pc  crustcrawler_pen_gazebo.pc
crust_ws/devel/share/crustcrawler_control/cmake/: crustcrawler_controlConfig.cmake
crust_ws/src/crustcrawler_dance/: CMakeLists.txt  package.xml
crust_ws/src/crustcrawler_dance/launch/: dance.launch  gazebo.launch
crust_ws/src/crustcrawler_dance/msg/: DeltaAngles.msg  DeltaPoint.msg  MusicString.msg
crust_ws/src/crustcrawler_dance/src/: BeatPlanner.py  InverseKinematic.py  Player.py  TimedMoveQueue.py  bypass_move.py  path_planner.py  point_to_point_mapper.py  tick_queue.py
crust_ws/src/crustcrawler_test_package/: CMakeLists.txt  package.xml
crust_ws/src/crustcrawler_test_package/src/: InverseKinematic.py  Player.py  path_planner.py
tutorial_ws/devel/: .catkin  .rosinstall  setup.sh
tutorial_ws/devel/include/tutorial_msgs/: RobotPos.h
tutorial_ws/devel/lib/pkgconfig/: tutorial.pc  tutorial_msgs.pc
tutorial_ws/src/tutorial/: CMakeLists.txt  package.xml
tutorial_ws/src/tutorial/launch/: start_publisher.launch
tutorial_ws/src/tutorial/src/: coords_listener.py  coords_publisher.py
tutorial_ws/src/tutorial_msgs/: CMakeLists.txt  package.xml
tutorial_ws/src/tutorial_msgs/msg/: RobotPos.msg
(+25 files in other folders)
